# generative_ai

./: README.md
agentic_ai/: README.md  crewai_flow.html
agentic_ai/src/dev_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
crewai_simple_flow/: .env  .gitignore  README.md  fun_fact.html  pyproject.toml
cursorai/agentic_ai/: pyproject.toml
cursorai/agentic_ai/src/dev_agents/: main.py
cursorai/agentic_ai/src/dev_agents/crews/dev_crew/: dev_crew.py
cursorai/crw_lang_project/pr1/: pyproject.toml  requirements.txt
cursorai/crw_lang_project/pr1/common/: __init__.py  config.py
cursorai/crw_lang_project/pr1/crewai_app/: __init__.py  agents.py  main.py  tasks.py
cursorai/crw_lang_project/pr1/langgraph_app/: __init__.py  graph.py  main.py  nodes.py
cursorai/project1/: README.md  pyproject.toml
cursorai/project1/src/project1/: hello.py
cursorai/simple_flow/: README.md  poem.txt  pyproject.toml
fast_api/: main.py  pyproject.toml
gemini_live_api/: gemini_live_api.ipynb
guardrails/: Input_Guardlais.ipynb  README.md
lang_chain_RAG_cv/: lang_chain_with_RAG.ipynb
lang_chain_gen_ai_hello_world/: lang_chain_gemini_gen_ai.ipynb
multi_agent/: README.md  multi_agent.ipynb
streaming/: README.md  stream_with_agemt_tool_param_name_print.ipynb  streaming_using_gemini_api.ipynb
uv/crewAI/crewai_flow/crewai_simple_flow/: .env  crewai_flow.html  pyproject.toml
uv/crewAI/crewai_flow/crewai_simple_flow/src/crewai_simple_flow/: __init__.py  main.py  router_flow.py
uv/crewAI/workflow-crewai/: pyproject.toml
uv/crewAI/workflow-crewai/src/workflow_crewai/: __init__.py  simple_flow.py
uv/lang-graph/workflow_langgraph/: pyproject.toml
uv/lang-graph/workflow_langgraph/src/workflow_langgrpah/: __init__.py  simple_flow.py
uv/uv_projects/package_example/: pyproject.toml
uv/uv_projects/package_example/src/package_example/: __init__.py
uv/uv_projects/uv_simple_project/: hello.py  pyproject.toml
