[project]
name = "simple_flow"
version = "0.1.0"
description = "simple_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
]

[project.scripts]
kickoff = "simple_flow.main:kickoff"
plot = "simple_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
