[project]
name = "crewai-simple-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahsan Ali", email = "ahsan.ali429@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.95.0",
    "litellm>=1.63.3",
]

[project.scripts]
city_fun_fact_flow_simple_flow = "crewai_simple_flow.simple_flow:kickoff"
city_fun_fact_flow_with_router = "crewai_simple_flow.router_flow:kickoff"
city_fun_fact_flow_with_router_plot = "crewai_simple_flow.router_flow:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
